2011-05-09  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] fix fast/dom/Geolocation/window-close-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60458

        Update all pages with Mock position/error/permission.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setGeolocationPermission):
        (LayoutTestController::setMockGeolocationError):
        (LayoutTestController::setMockGeolocationPosition):

2011-05-09  Shishir Agrawal  <shishir@chromium.org>

        Reviewed by Tony Gentilcore.

        Implement Page Visibility API.
        https://bugs.webkit.org/show_bug.cgi?id=54181

        * DumpRenderTree/LayoutTestController.cpp:
        (setPageVisibilityCallback):
        (resetPageVisibilityCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        (LayoutTestController::setPageVisibility):
        (LayoutTestController::resetPageVisibility):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::resetPageVisibility):
        (LayoutTestController::setPageVisibility):
        * DumpRenderTree/chromium/LayoutTestController.h:

2011-05-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Testing EWS spins on patches with a large number of failures
        https://bugs.webkit.org/show_bug.cgi?id=60441

        In cases where the tree has a small number of persistent failures but a
        patch has a large number of failures, we weren't believing any results.
        That lead to us retrying the patch forever while we waited for
        trustworthy results that would never come.

        This patch loosens the semantics of unexpected_failures to return a
        subset (rather than the exact set) of unexpected failures.  In the case