@@ -1,3 +1,12 @@
+2011-05-09  Alice Boxhall  <aboxhall@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        Pull jsonresults_unittest test cases out into separate test methods.
+        https://bugs.webkit.org/show_bug.cgi?id=60418
+
+        * TestResultServer/model/jsonresults_unittest.py:
+
 2011-05-09  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>
 
         Reviewed by Andreas Kling.
